# SMObench

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
benchmark/: README.md  tasks_sample.csv
benchmark/Dataset/: README.md  analyze_mouse_thymus.py  check_h5ad_labels.py  create_multimodal_labels_table.py  create_spatial_plots.py  create_umap.py  multimodal_labels_analysis.xlsx
benchmark/Draw/: README_scatter_plots.md  draw_train_time.py  plotHorizontalSummaryTableStyled.R  plotSMOBenchRadar.R  plotSMOBenchScatter.R  plotSMOBenchSummaryTableStyled.R  plot_horizontal_summary.py  plot_integration_overall_summary.R  plot_mouse_thymus1_slices_with_legends.py  plot_mouse_thymus1_umaps.py  plot_slices.py  plot_spabalance_3m.py  plot_vertical_summary.py  run_horizontal_summary_tables.sh  run_radar_plots.sh  run_scatter_plots.sh  run_styled_summary_tables.sh
benchmark/Eval/: README.md  aggregate_method_scores.py  eval_horizontal_integration.py  eval_vertical_integration.py  generate_final_results.py  generate_horizontal_results.py
benchmark/Eval/src/: clustering_simple.py  demo.py  spatial_metrics_simple.py
benchmark/Methods/PRAGA/: clustering_utils.py
benchmark/Methods/SpaBalance/: requirements.txt
benchmark/Methods/SpaFusion/: README.md  utils.py
benchmark/Methods/SpaMI/: README.md  requirements.txt
benchmark/Methods/spaMultiVAE/: VAE_utils.py  __init__.py  spaMultiVAE.py
benchmark/Scripts/: README.md
benchmark/Scripts/data_preparation/: check_fusion_results.py  generate_fusion_data.py  peak_fusion_utils.py
benchmark/Scripts/evaluation/: aggregate_spamosaic_mosaic.py  build_integration_final_scores.py
benchmark/Scripts/visualization/: batch_visualization.py  plot_umap_spatial.py  run_visualization.sh
benchmark/Utils/: README.md  SMOBench_clustering.py  check_adata_structure.py
benchmark/_myx_Methods/: README.md
benchmark/_myx_Methods/SpaFusion/: encoder.py  high_order_matrix.py  main.py  processing.py
benchmark/_myx_Methods/spaMultiVAE/: SVGP.py
benchmark/_myx_Results/evaluation/: cmgtc_per_modality.csv  cmgtc_scalability.csv  recluster_eval.csv
benchmark/_myx_Scripts/: README_structure.md
benchmark/_myx_Scripts/data_preparation/: check_fusion_results.py  check_varname_consistency.py  generate_fusion_data.py  peak_fusion_utils.py  regenerate_thymus_adt.py
benchmark/_myx_Scripts/evaluation/: aggregate_scores.py  build_integration_final_scores.py  cmgtc_scalability.py  cmgtc_synthetic_validation.py  compute_cmgtc.py  compute_cmgtc_mosaic.py  compute_cmgtc_mosaic_single.py  (+14 more)
benchmark/docs/: status.md
configs/: method_params.yaml
docs/: USER_GUIDE.md  tutorial.md
scripts/: build_envs.sh
singularity/: README.md  build.sh  build_all.sh  run_all.sh  run_all_datasets.sh  run_method.sh  setup_envs.sh  submit_build.pbs  submit_pbs.sh  submit_run.pbs  submit_setup.pbs
singularity/defs/: CANDIES.def  COSMOS.def  MISO.def  MultiGATE.def  PRAGA.def  PRESENT.def  SMOPCA.def  SWITCH.def  SpaBalance.def  SpaFusion.def  SpaMI.def  SpaMV.def  SpaMosaic.def  SpatialGlue.def  smobench_full.def  smobench_full_v2.def  spaMultiVAE.def
src/smobench/: __init__.py  _constants.py  _env.py  _runner.py  cli.py  config.py
tests/: test_basic.py
tutorials/: run_all_methods.py  test_miso_all.py  test_praga_all.py  test_smopca_all.py  test_spami_all.py  test_spamultivae_all.py  test_spamv_all.py  test_spatialglue_all.py
tutorials/results/: candies_all_results.csv  cosmos_all_results.csv  miso_all_results.csv  multigate_all_results.csv  praga_all_results.csv  present_all_results.csv  spabalance_all_results.csv  spafusion_all_results.csv  spami_all_results.csv  spamosaic_all_results.csv  spamultivae_all_results.csv  spamv_all_results.csv  spatialglue_all_results.csv  switch_all_results.csv
tutorials/scripts/: backfill_metrics.py  plot_comparison.py  test_all_plots.py  test_candies_all.py  test_comparison.py  test_cosmos_all.py  test_multigate_all.py  test_plot.py  test_plot_full.py  test_present_all.py  test_spabalance_all.py  test_spafusion_all.py  test_spamosaic_all.py  test_switch_all.py
(+1989 files in other folders)
